[package]

name = "dpp"
version = "0.0.1"
authors = ["Michael Layzell <michael@thelayzells.com>"]

[dependencies.duckyc_syntax]

path = "../duckyc_syntax"

[[bin]]

name = "dpp"

# This is a hack so that the entire Cargo project can be put in a gist.
# gists cannot contain directories, so the source has to be in the same
# directory as this file.
# path = "main.rs"
